Name:           ghcjs
Version:        0.1.0
Description:    Haskell to Javascript translator
License:        BSD3 
License-file:   LICENSE
Author:         Victor Nazarov
Copyright:      Victor Nazarov
Maintainer:     Victor Nazarov <asviraspossible@gmail.com>
Stability:      Experimental
Build-Type:     Simple
Cabal-Version:  >= 1.6
flag ghc7

Executable ghcjs
    Main-Is:        Compiler/Main.hs
    Hs-Source-Dirs: src
    if flag(ghc7) 
      Build-Depends:  base >=3 && <5, ghc >= 7.0 && < 7.3, ghc-paths, monads-tf, containers, filepath
      cpp-options:     -DGHC7
    else
      Build-Depends:  base >=3 && <5, ghc == 6.12.3, ghc-paths, monads-tf, containers, filepath
    GHC-Options:    -Wall -fno-warn-name-shadowing -fno-warn-orphans

