Name:           ghcjs
Version:        0.1.0
Description:    Haskell to Javascript translator
License:        BSD3
License-file:   LICENSE
Author:         Victor Nazarov
Copyright:      Victor Nazarov
Maintainer:     Victor Nazarov <asviraspossible@gmail.com>
Stability:      Experimental
Build-Type:     Simple
Cabal-Version:  >= 1.10

flag ghc7

Executable ghcjs
    Main-Is:        Compiler/Main.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs: src
    if flag(ghc7) 
      Build-Depends:  base >=3 && <5, ghc >= 7.0 && < 7.3, ghc-paths, monads-tf, containers, filepath
      cpp-options:     -DGHC7
    else
      Build-Depends:  base >=3 && <5, ghc == 6.12.3, ghc-paths, monads-tf, containers, filepath
    GHC-Options:    -Wall -fno-warn-name-shadowing -fno-warn-orphans
    Other-Modules:  Javascript.Language, Javascript.Trampoline, Javascript.Formatted.Base,
                    Javascript.Formatted.Expression, Javascript.Formatted.Statement,
                    Javascript.Formatted, RTS.Objects, Generator.Helpers, Generator.Dependencies,
                    Generator.PrimOp, Generator.FFI, Generator.Core, Generator.TopLevel

Executable ghcjs-link
    Main-Is:        Linker/Main.hs
    Default-Language: Haskell2010
    Hs-Source-Dirs: src
    Build-Depends:  base >=3 && <5, ghc, Cabal, containers, filepath, directory, process, time
    Other-Modules:  Generator.Link

test-suite test
    type:       exitcode-stdio-1.0
    Default-Language: Haskell2010
    hs-source-dirs: examples
    main-is:    BuildTest.hs
    build-depends: base >=3 && <5, process
