name:                ghcjs-prim
version:             0.1.1.0
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: GHCJS.Prim
                   GHCJS.Prim.Internal
                   GHCJS.Prim.Internal.Build

  c-sources: cbits/ghcjs-prim.c
  build-depends:       base             >= 4 && < 5,
                       ghc-prim
  default-language:    Haskell2010
  ghc-options: -O2
  cpp-options: -DBOOTING_PACKAGE=ghcjs-prim
