name:                ghcjs-th
version:             0.1.0.0
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: GHCJS.Prim.TH.Eval
                   GHCJS.Prim.TH.Serialized
                   GHCJS.Prim.TH.Types

  build-depends:       base             >= 4 && < 5,
                       ghc-prim,
                       binary,
                       bytestring,
                       containers
  if impl(ghcjs)
    build-depends:     template-haskell >= 2.12 && < 2.15,
                       ghci
  else
    build-depends:     template-haskell-ghcjs,
                       ghci-ghcjs

  default-language:    Haskell2010
  ghc-options: -O2
  cpp-options: -DBOOTING_PACKAGE=ghcjs-th
