name:                ghcjs-th
version:             0.1.0.0
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10


-- build against the template haskell package from the host GHC
--  (which must be built with the GHCJS patches)
flag use-host-template-haskell
  description: build against template-haskell package from the host GHC
               instead of template-haskell-ghcjs
  default:     False
  manual:      True



library
  exposed-modules: GHCJS.Prim.TH.Eval
                   GHCJS.Prim.TH.Serialized
                   GHCJS.Prim.TH.Types

  build-depends:       base             >= 4 && < 5,
                       ghc-prim,
                       binary,
                       bytestring,
                       containers,
                       template-haskell >= 2.12 && < 2.16,
                       ghci

  default-language:    Haskell2010
  ghc-options: -O2
  cpp-options: -DBOOTING_PACKAGE=ghcjs-th
